# sml

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: tests.yml
include/: matrix4.h  quaternion.h  sml.h  transform.h  vector3.h
sml/: color.h  constants.h  matrix4.h  quaternion.h  sml.h  transform.h  vector3.h
tests/: matrix4.spec.cc  smltests.h  tests.cc  vector3.spec.cc  vector3.spec.h
tests/spec/: color.spec.cc  matrix4.spec.cc  quaternion.spec.cc  transform.spec.cc  vector3.spec.cc
